deployment/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-fantasy-football-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-fantasy-football-service
  template:
    metadata:
      labels:
        app: mysql-fantasy-football-service
    spec:
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-persistent-storage
      containers:
        - name: mysql-fantasy-football-service
          image: mysql/mysql-server:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql # Mount the persistent volume to the MySQL data directory
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-fantasy-football-service-service
spec:
  type: ClusterIP
  selector:
    app: mysql-fantasy-football-service
  ports:
    - port: 3306
      targetPort: 3306
