deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fantasy-football-service
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fantasy-football-service
  template:
    metadata:
      labels:
        app: fantasy-football-service
    spec:
      containers:
        - name: fantasy-football-service
          image: ghcr.io/markvdkort/s6-fantasyfootballservice:development
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fantasy-football-service-service
spec:
  type: NodePort
  selector:
    app: fantasy-football-service
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30001 # Choose a nodePort within the range of 30000-32767
