deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fantasy-football-service-service
spec:
  type: NodePort
  selector:
    app: fantasy-football-service
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30001  # Choose a nodePort within the range of 30000-32767
