deployment/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fantasyfootball-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /draft/?(.*)
            pathType: Prefix
            backend:
              service:
                name: draftservice-service
                port:
                  number: 80
          - path: /fantasyfootball/?(.*)
            pathType: Prefix
            backend:
              service:
                name: fantasy-football-service-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  selector:
    app: ingress-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30089
  externalIPs:
    - 80.11.12.10
